# SuikaMultiPlayer-Server

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: release-drafter.yml
.github/workflows/: build.yml  release-drafter.yml
config/: config.yaml
data/: database.db  database.db-shm  database.db-wal
utils/: api.py  database.py  music_link_fetcher.py  tools.py
