[project]
name = "suikamulitplayer-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pyncm-async>=1.8.2",
    "pyyaml>=6.0.3",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pandas>=3.0.2",
]
