[project]
name = "suikamulitplayer-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.29",
    "uvicorn[standard]>=0.47.0",
]
